홈페이지 헤더 인덱스 및 글자색 변경

--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,16 @@ img {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
+
   }
 
   .topPage header nav ul {
     display: flex;
     justify-content: space-around;
     border-top: 2px solid #dddddd;
-    border-bottom: 2px solid #dddddd;
-    background-color: rgba(255, 255, 255, 0.5);
+    border-bottom: 3px solid #535fcc;
+    background-color: rgba(215, 224, 247, 0.8);
     padding: 12px 0px 10px;
     margin: 0 auto;
   }
@@ -56,6 +58,8 @@ img {
   .topPage header nav ul li a {
     font-size: 18px;
     font-weight: 100;
+    color: #394b72; /* 아주 연한 파란색 텍스트 */
+    text-shadow: 1px 1px 3px rgba(30, 144, 255, 0.8); /* 밝은 파란색 (DodgerBlue) 그림자에 50% 투명도 */
   }
 
   .topPage header nav ul li a:hover {
@@ -111,8 +115,8 @@ img {
   }
 
   .linkList:has(.card:hover) .card:not(:hover) {
-    filter: blur(2px);
-    opacity: 0.8;
+    filter: blur(1px);
+    opacity: 0.85;
   }
 
   /* subpage header & main */
@@ -562,6 +566,8 @@ img {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
+
   }
 
   .topPage header nav ul {
@@ -577,6 +583,8 @@ img {
   .topPage header nav ul li a {
     font-size: 18px;
     font-weight: 100;
+    color: #000000;
+    text-shadow: 1px 1px 3px #394b72;
   }
 
   .topPage header nav ul li a:hover {
